--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
 spring.application.name=itmohomework
 
 server.port=8081
+
+# DB settings
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5433/beauty
+spring.datasource.username=cdpo
+spring.datasource.password=cdpo
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.show-sql=false
+
+spring.sql.init.mode=never
+
+spring.jpa.defer-datasource-initialization=false
