Добавлена логика авторизации и распределение ролей Вся логика вынесена в отдельную директорию security (для дальнейшего выноса в отдельный микросервис)
Добавлен административный функционал (отмена/перенос брони супер пользователем, назначение ролей админом и тд)

Добавлен функционал установки скидок (3 типа - для конкретной брони, на услугу и конкретному пользователю)

Откорректирована сущность Appointment, заработанные деньги вынесены в нее (происходит учет скидок, при подтверждении выполненной услуги)
Переписан метод подсчета прибыли

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=itmohomework
+security.jwtSecret="myJwtSecretKey"
+security.jwtRefreshSecret="myRefreshSecretKey"
+security.jwtSecretExpiration=86400000
 
 server.port=8081
 
@@ -7,7 +10,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5433/beauty
 spring.datasource.username=cdpo
 spring.datasource.password=cdpo
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=false
 
