Добавлена логика взаимодействия с двумя другими сервисами сервис отправки уведомлений и сервис статистики Взаимодейтсиве по средствам rest клиента и feign клиента, управление за счет профиля (интерфейс единый) Добавлена логика отправки запроса в сервис статистики периодической задачей раз в сутки

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=itmohomework
+
+spring.profiles.active=feign
+
 security.jwtSecret="myJwtSecretKey"
 security.jwtRefreshSecret="myRefreshSecretKey"
 security.jwtSecretExpiration=86400000
